--- a/day1/templates/index.html
+++ b/day1/templates/index.html
@@ -5,6 +5,8 @@
     <title>我的联通</title>
 </head>
 <body>
+    <a href="http://www.baidu.com">点击跳转百度</a>
+    <a href="/get/news">查看更多</a>
     <h1>中国联通</h1>
     <h3>广西联通</h3>
     <div>山东蓝翔</div>
@@ -22,5 +24,7 @@
     <span style="color:red">asdfa阿萨德</span>
     <span style="color:green">啊说的话</span>
     <h2>123</h2>
+    <img src="/static/bruce.jpg" style="height: 600px;width: 400px"/>
+    <img src="/static/bruce.jpg" style="width: 10%"/>
 </body>
 </html>
