--- a/day1/templates/index.html
+++ b/day1/templates/index.html
@@ -26,5 +26,133 @@
     <h2>123</h2>
     <img src="/static/bruce.jpg" style="height: 600px;width: 400px"/>
     <img src="/static/bruce.jpg" style="width: 10%"/>
+
+    <ul>
+        <li>中国联通</li>
+        <li>中国移动</li>
+        <li>中国电信</li>
+    </ul>
+
+    <ol>
+        <li>中国联通</li>
+        <li>中国移动</li>
+        <li>中国电信</li>
+    </ol>
+
+    <table border="1">
+        <thead>
+            <tr>
+                <th>头像</th>
+                <th>ID</th>
+                <th>姓名</th>
+                <th>年龄</th>
+                <th>更多信息</th>
+                <th>操作</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>
+                    <img src="/static/a1.jpg" style="height:50px"/>
+                </td>
+                <td>1</td>
+                <td>cgt</td>
+                <td>23</td>
+                <td>
+                    <a target="_blank" href="https://www.baidu.com/s?wd=%E5%93%AA%E5%90%92%E6%89%93%E4%BA%BA%20%E6%95%96%E4%B8%99%E5%8A%9D%E6%9E%B6&usm=6&ie=utf-8&rsv_pq=a588ce25004f8c9e&oq=asd&rsv_t=e2633Bdc8zMiZYFynagolPceGBO8bJ7dWgMUbGBoF8x%2FaGlhbNYKfyR%2BLEY&rqid=a588ce25004f8c9e&rsf=145e4479b8c9db43e138622a0841c638_1_15_2&rsv_dl=0_right_fyb_pchot_20811&sa=0_right_fyb_pchot_20811">点击查看</a>
+                </td>
+                <td>
+                    编辑 删除
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <img src="/static/a2.jpg" style="height:50px"/>
+                </td>
+                <td>2</td>
+                <td>cgt1</td>
+                <td>24</td>
+                <td>
+                    <a target="_blank"  href="https://www.baidu.com/s?wd=%E6%92%92%E8%B4%9D%E5%AE%81%E7%A9%BF%E8%8A%B1%E8%A2%84cos%E6%98%A5%E6%99%9A%E6%9C%BA%E5%99%A8%E4%BA%BA&ie=utf-8&rsv_pq=b7d831810073dac1&oq=%E5%93%AA%E5%90%92%E6%89%93%E4%BA%BA%20%E6%95%96%E4%B8%99%E5%8A%9D%E6%9E%B6&rsv_t=49b1yM%2B7kpGqxEn9FkPtA6ylcF%2BNPvkFppZu%2BfXvUrjSQv2M5Q6z%2FLBSGWg&rqid=b7d831810073dac1&rsf=145e4479b8c9db43e138622a0841c638_1_15_3&rsv_dl=0_right_fyb_pchot_20811&sa=0_right_fyb_pchot_20811">点击查看</a>
+                </td>
+                <td>
+                    编辑 删除
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <img src="/static/a3.jpg" style="height:50px"/>
+                </td>
+                <td>3</td>
+                <td>cgt2</td>
+                <td>25</td>
+                <td>
+                    <a target="_blank"  href="https://www.baidu.com/s?wd=%E5%85%83%E5%AE%B5%E5%9C%86%E5%9C%86%20%E6%97%A5%E5%AD%90%E7%94%9C%E7%94%9C&ie=utf-8&rsv_pq=b7d831810073dac1&oq=%E5%93%AA%E5%90%92%E6%89%93%E4%BA%BA%20%E6%95%96%E4%B8%99%E5%8A%9D%E6%9E%B6&rsv_t=49b1yM%2B7kpGqxEn9FkPtA6ylcF%2BNPvkFppZu%2BfXvUrjSQv2M5Q6z%2FLBSGWg&rqid=b7d831810073dac1&rsf=145e4479b8c9db43e138622a0841c638_1_15_4&rsv_dl=0_right_fyb_pchot_20811&sa=0_right_fyb_pchot_20811">点击查看</a>
+                </td>
+                <td>
+                    编辑 删除
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <img src="/static/a4.jpg" style="height:50px"/>
+                </td>
+                <td>4</td>
+                <td>cgt3</td>
+                <td>26</td>
+                <td>
+                    <a target="_blank"  href="https://www.baidu.com/s?wd=%E3%80%8A%E5%93%AA%E5%90%922%E3%80%8B%E7%A5%A8%E6%88%BF%E7%AA%81%E7%A0%B495%E4%BA%BF&ie=utf-8&rsv_pq=b7d831810073dac1&oq=%E5%93%AA%E5%90%92%E6%89%93%E4%BA%BA%20%E6%95%96%E4%B8%99%E5%8A%9D%E6%9E%B6&rsv_t=49b1yM%2B7kpGqxEn9FkPtA6ylcF%2BNPvkFppZu%2BfXvUrjSQv2M5Q6z%2FLBSGWg&rqid=b7d831810073dac1&rsf=145e4479b8c9db43e138622a0841c638_1_15_5&rsv_dl=0_right_fyb_pchot_20811&sa=0_right_fyb_pchot_20811">点击查看</a>
+                </td>
+                <td>
+                    编辑 删除
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <img src="/static/a5.jpg" style="height:50px"/>
+                </td>
+                <td>5</td>
+                <td>cgt4</td>
+                <td>23</td>
+                <td>
+                    <a target="_blank"  href="https://www.baidu.com/s?wd=%E5%B1%B1%E4%B8%9C%E4%BA%BA%E4%B8%8D%E8%AF%AD%E5%8F%AA%E6%98%AF%E4%B8%80%E5%91%B3%E4%B9%B0%E7%A5%A8&ie=utf-8&rsv_pq=c210e991004fc728&oq=%E3%80%8A%E5%93%AA%E5%90%922%E3%80%8B%E7%A5%A8%E6%88%BF%E7%AA%81%E7%A0%B495%E4%BA%BF&rsv_t=fb27C9cZfUucyOIxjnl5p3dAsBlsTJ5hxm5qZh%2F%2BK9le%2B%2FMwOvBTEe16JLs&rqid=c210e991004fc728&rsf=145e4479b8c9db43e138622a0841c638_1_15_6&rsv_dl=0_right_fyb_pchot_20811&sa=0_right_fyb_pchot_20811">点击查看</a>
+                </td>
+                <td>
+                    编辑 删除
+                </td>
+            </tr>
+        </tbody>
+    </table>
+
+    <h1>输入内容</h1>
+    <input type="text">
+    <input type="password">
+    <input type="file">
+    <input type="radio" name="n1">男
+    <input type="radio" name="n1">女
+
+    <input type="checkbox">1
+    <input type="checkbox">2
+    <input type="checkbox">3
+
+    <input type="button" value="提交">普通的按钮
+    <input type="submit" value="提交">提交表单
+
+    <h1>下拉框</h1>
+    单选
+    <select style="width:100px">
+        <option>北京</option>
+        <option>上海</option>
+        <option>深圳</option>
+    </select>
+    多选
+    <select style="width:100px" multiple>
+        <option>北京</option>
+        <option>上海</option>
+        <option>深圳</option>
+    </select>
+
+    <h1>多行文本</h1>
+    <textarea rows="6"></textarea>
 </body>
 </html>
