--- a/day2_account/templates/xiaomi.html
+++ b/day2_account/templates/xiaomi.html
@@ -7,9 +7,18 @@
         body {
             margin:0;
         }
+        body .container {
+            width: 1226px;
+            margin: 0 auto;
+        }
+        img {
+            width: 100%;
+            height: 100%;
+        }
+        .left {
+            float: left;
+        }
         .header {
-<!--            height:38px;-->
-<!--            background-color: black;-->
             color: #b0b0b0;
             background: #333;
         }
@@ -26,16 +35,109 @@
             height:38px;
             line-height:38px;
         }
-        .header .container {
-            width: 1226px;
-            margin: 0 auto;
-        }
         .header a {
             color: #b0b0b0;
             line-height: 40px;
             display: inline-block;
             font-size: 12px;
             margin-right:10px;
+            text-decoration: none;
+        }
+        .header a:hover {
+            color: white;
+        }
+        .sub-header {
+            height: 100px;
+            width: 1226px;
+            margin: 0 auto;
+        }
+        .sub-header .ht{
+            height: 100px;
+        }
+        .sub-header .logo {
+            width: 234px;
+            height: 100px;
+            float: left;
+        }
+        .sub-header .logo a{
+            margin-top: 22px;
+            margin-bottom: 22px;
+            display: inline-block;
+        }
+
+        .sub-header .logo img{
+            width:56px;
+            height:56px;
+        }
+
+        .sub-header .menu-list {
+            float: left;
+            line-height: 100px;
+        }
+        .sub-header .menu-list a{
+            padding: 0 20px;
+            display: inline-block;
+            color: #333;
+            font-size: 16px;
+            text-decoration: none;
+        }
+        .sub-header .menu-list a:hover{
+            color: #ff6700;
+        }
+
+        .sub-header .search {
+            float: right;
+        }
+
+        .slider sd-image {
+            width：1226px;
+            height: 460px;
+        }
+
+        .news {
+            margin-top: 14px;
+        }
+
+        .news .channel {
+            width: 228px;
+            height: 164px;
+            background-color: #5f5750;
+            padding: 3px;
+        }
+
+        .news .list-item {
+            width: 316px;
+            height: 170px;
+            margin-left: 14px;
+        }
+
+        .news .channel .item {
+            height: 82px;
+            width: 76px;
+        }
+
+        .news .channel .item a {
+            font-size: 12px;
+            display: block;
+            padding-top: 18px;
+            color: #fff;
+            text-decoration: none;
+            opacity: 0.7;
+        }
+
+        .news .channel .item a:hover {
+            opacity: 1;
+        }
+
+        .news .channel .item img {
+            width: 24px;
+            display: block;
+            height: 24px;
+            margin: 0 auto 4px;
+        }
+        .news .channel .item span {
+            display: block;
+            text-align: center;
         }
     </style>
 </head>
@@ -43,20 +145,102 @@
     <div class="header">
       <div class="container">
           <div class="menu">
-              <a>小米商城</a>
-              <a>MIUI</a>
-              <a>云服务</a>
-              <a>有品开放平台</a>
+              <a href="https://www.mi.com">小米商城</a>
+              <a href="https://www.mi.com">MIUI</a>
+              <a href="https://www.mi.com">云服务</a>
+              <a href="https://www.mi.com">有品开放平台</a>
           </div>
           <div class="account">
-              <a>登录</a>
-              <a>注册</a>
-              <a>消息通知</a>
+              <a href="https://www.mi.com">登录</a>
+              <a href="https://www.mi.com">注册</a>
+              <a href="https://www.mi.com">消息通知</a>
           </div>
       </div>
       <div style="clear: both"></div>
     </div>
+    <div class="sub-header">
+        <div class="container">
+            <div class="ht logo">
+               <a href="https://www.mi.com">
+                   <img src="../images/logo.png">
+               </a>
+            </div>
+            <div class="ht menu-list">
+                <a href="https://www.mi.com">小米手机</a>
+                <a href="https://www.mi.com">红米手机</a>
+                <a href="https://www.mi.com">电视</a>
+                <a href="https://www.mi.com">笔记本</a>
+                <a href="https://www.mi.com">平板电脑</a>
+            </div>
+            <div class="ht search">
 
+            </div>
+            <div style="clear: both;"></div>
+        </div>
 
+    </div>
+
+    <div class="slider">
+        <div class="container">
+            <div class="sd-image">
+                <img src="../images/b1.jpg" alt="图片消失，请检查网络">
+            </div>
+
+        </div>
+    </div>
+
+    <div class="news">
+        <div class="container">
+            <div class="channel left">
+                <div class="item left">
+                    <a href="https://www.mi.com">
+                        <img src="../images/v1.png" alt="">
+                        <span>保障服务</span>
+                    </a>
+                </div>
+                <div class="item left">
+                    <a href="https://www.mi.com">
+                        <img src="../images/v1.png" alt="">
+                        <span>保障服务</span>
+                    </a>
+                </div>
+                <div class="item left">
+                    <a href="https://www.mi.com">
+                        <img src="../images/v1.png" alt="">
+                        <span>保障服务</span>
+                    </a>
+                </div>
+                <div class="item left">
+                    <a href="https://www.mi.com">
+                        <img src="../images/v1.png" alt="">
+                        <span>保障服务</span>
+                    </a>
+                </div>
+                <div class="item left">
+                    <a href="https://www.mi.com">
+                        <img src="../images/v1.png" alt="">
+                        <span>保障服务</span>
+                    </a>
+                </div>
+                <div class="item left">
+                    <a href="https://www.mi.com">
+                        <img src="../images/v1.png" alt="">
+                        <span>保障服务</span>
+                    </a>
+                </div>
+                <div style="clear:both"></div>
+            </div>
+            <div class="left list-item">
+                <img src="../images/b2.png">
+            </div>
+            <div class="left list-item">
+                <img src="../images/b3.png">
+            </div>
+            <div class="left list-item">
+                <img src="../images/b4.png">
+            </div>
+            <div class="clear: both"></div>
+        </div>
+    </div>
 </body>
 </html>
