--- a/day2_account/templates/xiaomi.html
+++ b/day2_account/templates/xiaomi.html
@@ -227,7 +227,7 @@
               <a href="https://www.mi.com">登录</a>
               <a href="https://www.mi.com">注册</a>
               <a href="https://www.mi.com">消息通知</a>
-              <a class="app_download" href="https://www.mi.com">下载app
+              <a class="app_download" href="https://www.mi.com">下载小米app
                   <div class="app">
                         <div class="left tryDownload"></div>
                         <div class=" left download">
